--- a/styles/galerie.less
+++ b/styles/galerie.less
@@ -84,13 +84,13 @@
             }
 
             img {
-                .transform(translate(-50%,-50%)) !important;
+                .transform(translate(-50%,-50%) scale(1.1)) !important;
                 .transition(.3s @easeInOut);
             }
 
             &:hover{
                 img {
-                    .transform(translate(-47%,-50%)) !important;
+                    .transform(translate(-47%,-50%) scale(1.1)) !important;
                 }
             }
 
@@ -110,6 +110,7 @@
 
                 .text{
                     position: absolute;
+                    width: 100%;
                     bottom: 10px;
                 }
 
