--- a/styles/clients.less
+++ b/styles/clients.less
@@ -100,6 +100,7 @@
                 h4{
                     display: inline-block;
                     margin: 10px;
+                    font-weight: normal;
                     text-transform: lowercase;
 
                     &::first-letter{
