--- a/styles/contact.less
+++ b/styles/contact.less
@@ -9,11 +9,10 @@
 		.firstTitle {
 			padding: 60px 0 40px;
 		}
-		.fioriture {
+		zigouigoui{
 			position: relative;
 			margin: 0 auto;
-			opacity: .5;
-			padding-bottom: 35px;
+			margin-bottom: 40px;
 		}
 	}
 
