--- a/styles/home.less
+++ b/styles/home.less
@@ -57,7 +57,7 @@
             max-width: 900px;
             height: 200px;
             position: relative;
-            margin: 50px 0;
+            margin: 0;
 
             display: flex;
             flex-wrap: wrap;
