--- a/styles/single.less
+++ b/styles/single.less
@@ -20,14 +20,28 @@
             background-color: @opaqueBlack;
 
             h1{
-                color: @saumon;
+                color: @beige;
                 font-family: @title;
                 font-weight: normal;
                 font-size: 1.5rem;
+                line-height: 2.2rem;
+                margin-bottom: 15px;
+            }
+
+            h2{
+                color: @saumon;
+                font-family: @subtitle;
+                font-weight: normal;
+                font-size: 1.3rem;
+                line-height: 2rem;
             }
 
             p{
-                color: #fff;
+                color: @beige;
+                font-family: @paragraph;
+                font-weight: lighter;
+                font-size: .9rem;
+                line-height: 1.5rem;
             }
         }
 
