--- a/styles/slider.less
+++ b/styles/slider.less
@@ -4,7 +4,7 @@
     height: 100%;
     overflow: hidden;
 
-    background-color: rgba(0,0,0, .8);
+    background-color: rgb(40,40,40);
 
     nav{
         position: absolute;
@@ -56,8 +56,11 @@
         width: 100%;
         height: 100%;
         z-index: 10;
-
+        background-color: rgb(40,40,40);
         .box-shadow(0px 0px 300px 10px rgba(0,0,0,.8));
+        img{
+            .box-shadow(0px 0px 100px 10px rgba(0,0,0,.8));
+        }
     }
 
 }
