add backward tab animation

--- a/styles/galerie.less
+++ b/styles/galerie.less
@@ -55,6 +55,21 @@
         background-color: #000;
     }
 
+    .TlInfos{
+        position: absolute;
+        left: 50px;
+        top: 50%;
+        width: 100px;
+        font-family: @subtitle;
+        opacity: 1;
+
+        &-date{
+            font-size: 1rem;
+            font-weight: bold;
+            color: @saumon;
+        }
+    }
+
     gallery.center{
         position: relative;
         max-width: 100%;
