add homepage anim + galerie binder +member page

--- a/styles/contact.less
+++ b/styles/contact.less
@@ -5,6 +5,15 @@
 }
 #contactContainer{
 
+	button.membreButton{
+        position: absolute;
+        right: -60px;
+        top: 50%;
+        width: 150px;
+        font-size: .6rem;
+        .transform(translateY(-50%) rotate(-90deg));
+    }
+
 	header {
 		.firstTitle {
 			padding: 60px 0 40px;
