--- a/styles/common.less
+++ b/styles/common.less
@@ -12,7 +12,7 @@
     transform: @value;
 }
 
-.box-shadow(@value){
+.box-shadow(@value) {
     box-shadow: @value;
     -webkit-box-shadow: @value;
     -moz-box-shadow: @value;
@@ -31,8 +31,9 @@
 @white: #E0D5C4;
 @saumon: #ce7259;
 @darkSaumon: #c13c25;
+@darkerSaumon: #9f301c;
 // sizes
-@border: 15px;
+@border: 13px;
 @topBorder: 40px;
 // FONTS
 @title: 'Pistilli';
@@ -241,13 +242,13 @@ div.border {
     display: inline-block;
     position: absolute;
     top: 5px;
-    left: 15px;
+    left: @border;
     height: 30px;
     width: 150px;
     z-index: 15;
 
     cursor: pointer;
-    background: @lightGray;
+    // background: @lightGray;
 }
 
 menu {
@@ -255,7 +256,6 @@ menu {
     font-family: @subtitle;
     text-transform: uppercase;
     font-size: 12px;
-    font-weight: bold;
     letter-spacing: 1px;
     color: @gray;
 
@@ -281,11 +281,12 @@ menu {
             }
         }
     }
+
     &.lang {
         text-align: right;
         position: absolute;
         top: 0;
-        right: 15px;
+        right: @border;
         width: 75px;
         height: @border;
 
@@ -295,6 +296,18 @@ menu {
             }
         }
     }
+}
+
+.mentionsLegales{
+    position: absolute;
+    bottom: 0;
+    right: @border;
+    z-index: 100;
+    font-family: @subtitle;
+    font-size: 12px;
+    line-height: 12px;
+    text-decoration: none;
+    color: rgb(213, 205, 186);
 }
 
 .textureBg{
