recettage #1 after interview with Pascale Therond

--- a/styles/contact.less
+++ b/styles/contact.less
@@ -86,9 +86,6 @@
 		&:nth-child(6) {
 			padding-left: 118px;
 		}
-		&:nth-child(8) {
-			padding-left: 99px;
-		}
 
 		span {
 			font-weight: 100;
@@ -101,8 +98,8 @@
 		margin: 0 0 -5px 5px;
 	}
 
-	.metro2, .metro7 {
-		margin-left: 40px;
+	.metro2, .metro7, .metro12 {
+		margin: 0 10px 0 35px;
 	}
 
 }
