try to implement feature with crosshair

--- a/styles/savoir.less
+++ b/styles/savoir.less
@@ -1,10 +1,18 @@
 .halfRight{
+    height: 100%;
+    width: 50%;
+    top: 0;
+    float: right;
     #savoirContainer{
         right: 0;
+
     }
 }
 
 .halfLeft{
+    height: 100%;
+    width: 50%;
+    float: left;
     #savoirContainer{
         left: 0;
     }
