--- a/styles/home.less
+++ b/styles/home.less
@@ -115,5 +115,15 @@
                 }
             }
         }
+        a {
+            position: absolute;
+            left: 50%;
+            margin-left: -25px;
+            margin-top: 30px;
+            img {
+                width: 50px;
+            }
+            
+        }
     }
 }
