add close icone

--- a/styles/savoirfaire.less
+++ b/styles/savoirfaire.less
@@ -30,6 +30,10 @@
         justify-content: center;
         align-items: center;
 
+        &.cross{
+            cursor: url("../assets/images/close_cursor.png") 18 18, auto;
+        }
+
         header{
             margin-top: 100px;
             .transition(.3s ease);
