add title Atelier La Feuille d'Or home

--- a/styles/home.less
+++ b/styles/home.less
@@ -2,6 +2,13 @@
 
     background-color: #000;
 
+    h1 {
+        font-family: @title;
+        color: @beige;
+        letter-spacing: 3px;
+        font-size: 1rem;
+    }
+
     &:after{
         opacity: .17;
     }
