--- a/styles/contact.less
+++ b/styles/contact.less
@@ -25,6 +25,8 @@
         justify-content: center;
         align-items: center;
 
+		overflow-x: hidden;
+
         header{
             .transition(.3s ease);
             &.hidden{
