--- a/styles/home.less
+++ b/styles/home.less
@@ -151,15 +151,9 @@
                 }
             }
         }
-        a {
-            position: absolute;
-            left: 50%;
-            margin-left: -25px;
-            margin-top: 30px;
-            img {
-                width: 50px;
-            }
-            
+        .logo-epv{
+            width: 75px;
+            .transform(translateX(-5px));
         }
     }
 }
