--- a/styles/openedFormation.less
+++ b/styles/openedFormation.less
@@ -2,8 +2,11 @@
 
     position: absolute;
     width: 50%;
-    height: 100%;
+    min-height: 100%;
+
     background: @beige;
+
+    overflow: auto;
 
     .box-shadow(0px 0px 60px rgba(0,0,0,.6));
 
@@ -29,9 +32,10 @@
 
     .Details {
         position: absolute;
-        height: 50%;
         width: 100%;
-        bottom: 0;
+        top: 50%;
+        padding: 20px;
+        box-sizing: border-box;
 
         background: @beige;
 
@@ -39,6 +43,8 @@
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
+
+        overflow-y: auto;
 
         &-content{
             margin: 0 10%;
@@ -48,16 +54,18 @@
                 font-family: @subtitle;
                 font-weight: bold;
                 font-size: 1.2rem;
+                margin: 20px 0;
             }
 
             p{
                 font-family: @subtitle;
-                font-weight: normal;
+                font-weight: lighter;
                 color: @black;
+                margin: 15px 0;
             }
 
             button{
-                margin-top: 20px;
+                margin: 20px 0;
             }
         }
     }
